; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3100/src/extr_flowcont.c__SlDrvFlowContDeinit.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3100/src/extr_flowcont.c__SlDrvFlowContDeinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i64 }

@g_pCB = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_SlDrvFlowContDeinit() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g_pCB, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 2
  store i64 0, i64* %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g_pCB, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = call i32 @sl_LockObjDelete(i32* %6)
  %8 = call i32 @OSI_RET_OK_CHECK(i32 %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g_pCB, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = call i32 @sl_SyncObjDelete(i32* %11)
  %13 = call i32 @OSI_RET_OK_CHECK(i32 %12)
  ret void
}

declare dso_local i32 @OSI_RET_OK_CHECK(i32) #1

declare dso_local i32 @sl_LockObjDelete(i32*) #1

declare dso_local i32 @sl_SyncObjDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
